src/test/ui/coherence-overlap-upstream-inherent.stderr
error[E0592]: duplicate definitions with name `dummy`
  --> $DIR/coherence-overlap-upstream-inherent.rs:21:32
   |
21 | impl<T> A<T> where T: Remote { fn dummy(&self) { } }
   |                                ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `dummy`
22 | //~^ ERROR E0592
23 | impl A<i16> { fn dummy(&self) { } }
   |               ------------------- other definition for `dummy`
   |
   = note: upstream crates may add new impl of trait `coherence_lib::Remote` for type `i16` in future versions

error: aborting due to previous error

